[gd_scene load_steps=3 format=2]

[ext_resource path="res://EspCamera.gd" type="Script" id=1]
[ext_resource path="res://scenes/joystick/joystick.tscn" type="PackedScene" id=2]

[node name="EspCamera" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="view" type="Sprite" parent="CenterContainer3"]
rotation = -1.5708
scale = Vector2( 2, 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = -200.0
margin_right = 300.0

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -200.0

[node name="JoystickLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 520 )

[node name="JoystickRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 1300, 520 )
